fit email addresses in one line

--- a/paper.tex
+++ b/paper.tex
@@ -24,18 +24,15 @@
     \IEEEauthorblockN{
         Valentin Carl\IEEEauthorrefmark{1},
         Daniel Gottschling\IEEEauthorrefmark{2},
-        Jonas Heisterberg\IEEEauthorrefmark{3},
-        David Schmidt\IEEEauthorrefmark{4}, and
-        Marvin Steinke\IEEEauthorrefmark{5}
+        Jonas Heisterberg\IEEEauthorrefmark{2},
+        David Schmidt\IEEEauthorrefmark{2}, and
+        Marvin Steinke\IEEEauthorrefmark{2}
     }
     \IEEEauthorblockA{
         Technische Universit\"at Berlin\\
         Email:
         \IEEEauthorrefmark{1}carl@tu-berlin.de,
-        \IEEEauthorrefmark{2}d.gottschling@campus.tu-berlin.de,
-        \IEEEauthorrefmark{3}heisterberg@campus.tu-berlin.de,\\
-        \IEEEauthorrefmark{4}d.schmidt@campus.tu-berlin.de,
-        \IEEEauthorrefmark{5}marvin.steinke@campus.tu-berlin.de
+        \IEEEauthorrefmark{2}\{d.gottschling, heisterberg, d.schmidt, marvin.steinke\}@campus.tu-berlin.de
     }
 }
 
