see last commit

--- a/paper.tex
+++ b/paper.tex
@@ -26,13 +26,13 @@
         Daniel Gottschling\IEEEauthorrefmark{2},
         Jonas Heisterberg\IEEEauthorrefmark{2},
         David Schmidt\IEEEauthorrefmark{2}, and
-        Marvin Steinke\IEEEauthorrefmark{2}
+        Marvin Steinke\IEEEauthorrefmark{1}
     }
     \IEEEauthorblockA{
         Technische Universit\"at Berlin\\
-        Email:
-        \IEEEauthorrefmark{1}carl@tu-berlin.de,
-        \IEEEauthorrefmark{2}\{d.gottschling, heisterberg, d.schmidt, marvin.steinke\}@campus.tu-berlin.de
+        Email: 
+        \IEEEauthorrefmark{1}\{carl, marvin.steinke\}@tu-berlin.de,
+        \IEEEauthorrefmark{2}\{d.gottschling, heisterberg, d.schmidt\}@campus.tu-berlin.de
     }
 }
 
